<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TastyTray</string>
    <string name="designed_by_coder_vivek">Designed by - Coder Vivek</string>
    <string name="splash_screen_tagline">Deliever Favorite Food</string>
    <string name="start_screen_tagline">Enjoy Restaurant Quality Meals\nat Home</string>
    <string name="app_name_tagline">Testy Tray of food</string>
    <string name="next_btn">Next</string>
    <string name="login_to_your_screen">Login To Your Screen</string>
    <string name="signin_screen">Sign Up Here</string>
    <string name="todo">TODO</string>
    <string name="email_or_phone_number">Email or Phone Number</string>
    <string name="password">Password</string>
    <string name="or">or</string>
    <string name="continue_with">Continue With</string>
    <string name="signup_with">Sign Up With</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="don_t_have_account">Don\'t Have Account?</string>
    <string name="already_have_account">Already Have An Account?</string>
    <string name="choose_your_location">Choose Your Location</string>
    <string name="choose_location">Choose Location</string>
    <string name="location_text">\t\t\t\t\t\tTo provide you with the best dining experience, we need your permission to access your device\'s location. By enabling location services, we can offer personalized restaurant recommendations, accurate delivery estimates, and ensure a seamless food delivery experience."</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="search">Search</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="explore_your_favorite_food">Explore Your Favorite Food</string>
    <string name="popular">Popular</string>
    <string name="view_menu">View Menu</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="price">$7</string>
    <string name="food_name">Food name</string>
    <string name="description">Description</string>


</resources>