<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="87dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="18dp"
        app:cardCornerRadius="22dp"
        app:cardElevation="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/FoodImage"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="16dp"
                android:importantForAccessibility="no"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.478"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/foodName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:textSize="18sp"
                android:fontFamily="@font/lato"
                android:text="@string/food_name"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/FoodImage"
                app:layout_constraintStart_toEndOf="@+id/FoodImage"
                app:layout_constraintTop_toTopOf="@+id/FoodImage"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/foodPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="12dp"
                android:text="@string/price"
                android:textColor="@color/text_color"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/addToCartButton"
                app:layout_constraintEnd_toEndOf="@+id/addToCartButton"
                app:layout_constraintStart_toStartOf="@+id/addToCartButton"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/addToCartButton"
                android:layout_width="80dp"
                android:layout_height="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/add_to_cart_shape"
                android:gravity="center"
                android:text="@string/add_to_cart"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/foodDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/description"
                app:layout_constraintEnd_toEndOf="@+id/foodName"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/foodName"
                app:layout_constraintTop_toBottomOf="@+id/foodName" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>